<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_margin_top"
        android:paddingLeft="@dimen/activity_margin_side"
        android:paddingRight="@dimen/activity_margin_side">

        <ImageView android:src="@drawable/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/app_logo_layout_height"
            android:layout_marginBottom="@dimen/app_logo_margin_bottom"
            tools:ignore="ContentDescription"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_activity_text_input_layout_margin"
            android:layout_marginBottom="@dimen/login_activity_text_input_layout_margin">
            <EditText android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/register_name_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_activity_text_input_layout_margin"
            android:layout_marginBottom="@dimen/login_activity_text_input_layout_margin">
            <EditText android:id="@+id/user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/register_user_login_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_activity_text_input_layout_margin"
            android:layout_marginBottom="@dimen/login_activity_text_input_layout_margin">
            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/register_password_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_activity_text_input_layout_margin"
            android:layout_marginBottom="@dimen/login_activity_text_input_layout_margin">
            <EditText android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/register_email_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_page_button_margin_top"
            android:layout_marginBottom="@dimen/login_page_button_margin_bottom"
            android:padding="@dimen/login_page_button_padding"
            android:text="@string/register_button_text"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_page_text_margin_bottom"
            android:text="@string/invite_to_login_message"
            android:gravity="center"
            android:textSize="@dimen/text_size_normal"/>
    </LinearLayout>
</ScrollView>